--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,26 @@ body {
     font-family: Arial, sans-serif;
     background-color: black;
     color: white;
+	animation: gradient 100s linear 1;
+    background: linear-gradient(45deg, #030303, #1f1e1e, #000000, #0d0d0e);
+	background-size: 400% 400%;
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	5% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
 .navbar {
-    background-color: black;
+
     text-align: center;
     padding: 20px 0;
     position: fixed;
@@ -20,7 +36,7 @@ body {
     display: inline-block;
     width: 60px;
     height: 60px;
-    background-color: black;
+
     border-radius: 50%;
     margin: 0 20px;
     position: relative;
@@ -65,6 +81,7 @@ body {
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     position: relative;
+    
 }
 
 .sidebar h2{
@@ -188,6 +205,6 @@ input[type=submit]:hover {
 
 .container {
     border-radius: 5px;
-    background-color: black;
+
     padding: 20px;
 }
